--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,6 +9,9 @@ jobs:
       fail-fast: false
       matrix:
         php-versions: ['7.4', '8.0' , '8.1']
+        include:
+          - php-versions: '8.2'
+            PHP_CS_FIXER_IGNORE_ENV: 1
 
     name: php-cs check php${{ matrix.php-versions }}
 
@@ -26,4 +29,6 @@ jobs:
         run: composer i
 
       - name: Run coding standards check
+        env:
+          PHP_CS_FIXER_IGNORE_ENV: ${{ matrix.PHP_CS_FIXER_IGNORE_ENV }}
         run: composer run cs:check || ( echo 'Please run `composer run cs:fix` to format your code' && exit 1 )
