--- a/composer.json
+++ b/composer.json
@@ -14,19 +14,40 @@
         "ext-sockets": "*"
     },
     "require-dev": {
-        "behat/behat": "^3.10",
-        "friendsofphp/php-cs-fixer": "^3.6",
-        "vimeo/psalm": "^4.21 || ^5.0",
-        "phpunit/phpunit": "^9.5"
+        "bamarni/composer-bin-plugin": "^1.8",
+        "behat/behat": "^3.12",
+        "phpunit/phpunit": "^9.5",
+        "roave/security-advisories": "dev-latest"
     },
     "scripts": {
+        "bin": "echo 'bin not installed'",
         "lint": "find . -name \\*.php -not -path './vendor/*' -not -path './build/*' -print0 | xargs -0 -n1 php -l",
         "cs:check": "php-cs-fixer fix --dry-run --diff",
-        "cs:fix": "php-cs-fixer fix"
+        "cs:fix": "php-cs-fixer fix",
+        "psalm": "psalm --threads=1",
+        "psalm:update-baseline": "psalm --threads=1 --update-baseline --set-baseline=tests/psalm-baseline.xml",
+        "psalm:clear": "psalm --clear-cache && psalm --clear-global-cache",
+        "post-install-cmd": [
+            "@composer bin all install --ansi",
+            "composer dump-autoload"
+        ],
+        "post-update-cmd": [
+            "@composer bin all update --ansi",
+            "composer dump-autoload"
+        ]
     },
     "autoload": {
         "psr-4": {
             "PhpBuiltin\\": "src/"
+        }
+    },
+    "config": {
+        "autoloader-suffix": "PhpBuiltin",
+        "optimize-autoloader": true,
+        "classmap-authoritative": true,
+        "sort-packages": true,
+        "allow-plugins": {
+            "bamarni/composer-bin-plugin": true
         }
     }
 }
