--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,19 +8,19 @@ jobs:
       # do not stop on another job's failure
       fail-fast: false
       matrix:
-        php-versions: ['7.4', '8.0' , '8.1']
+        php-versions: ['8.0' , '8.1', '8.2', '8.3']
         include:
-          - php-versions: '8.2'
+          - php-versions: '8.3'
             PHP_CS_FIXER_IGNORE_ENV: 1
 
     name: php-cs check php${{ matrix.php-versions }}
 
     steps:
       - name: Checkout
-        uses: actions/checkout@master
+        uses: actions/checkout@v4
 
       - name: Set up php
-        uses: shivammathur/setup-php@master
+        uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-versions }}
           coverage: none
