--- a/.github/workflows/psalm.yml
+++ b/.github/workflows/psalm.yml
@@ -8,16 +8,16 @@ jobs:
       # do not stop on another job's failure
       fail-fast: false
       matrix:
-        php-versions: ['7.4', '8.0' , '8.1', '8.2']
+        php-versions: ['8.0' , '8.1', '8.2', '8.3']
 
     name: Psalm check
 
     steps:
       - name: Checkout
-        uses: actions/checkout@master
+        uses: actions/checkout@v4
 
       - name: Set up php
-        uses: shivammathur/setup-php@master
+        uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-versions }}
           coverage: none
