--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
     },
     "require-dev": {
         "bamarni/composer-bin-plugin": "^1.8",
-        "behat/behat": "^3.12",
-        "phpunit/phpunit": "^9.5",
+        "behat/behat": "^3.15",
+        "phpunit/phpunit": "^10.5",
         "roave/security-advisories": "dev-latest"
     },
     "scripts": {
@@ -48,6 +48,9 @@
         "sort-packages": true,
         "allow-plugins": {
             "bamarni/composer-bin-plugin": true
+        },
+        "platform": {
+            "php": "8.1"
         }
     }
 }
